--- a/models/stage/jaffle_shop/stg_jaffle_shop.yml
+++ b/models/stage/jaffle_shop/stg_jaffle_shop.yml
@@ -2,19 +2,23 @@ version: 2
 
 models:
   - name: stg_customer
+    description: one unique customer per row
     columns:
       - name: customer_id
+        description: primary key of stg_customer
         tests:
           - unique
           - not_null
 
   - name: stg_orders
+    description: one unique order per row
     columns:
       - name: order_id
         tests:
           - unique
           - not_null
       - name: status
+        description: '{{ doc("order_status") }}'
         tests:
           - accepted_values:
               values:
@@ -23,4 +27,8 @@ models:
                 - "return_pending"
                 - "returned"
                 - "placed"    
-
+      - name: customer_id
+        tests:
+          - relationships:
+              to: ref('stg_customer')
+              field: customer_id
